# EmeraldInvoke

./: .gitignore  CMakeLists.txt
lib/: cinvoke.lib
src/Emerald/: MemBlock.cpp  MemBlock.h  Utils.h  main.cpp  stdlibext.cpp
